--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img src="/img/welcome.jpg" >
+              <img src="img/welcome.jpg" >
               <div class="container">
                 <div class="carousel-caption">
                   
