--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     </div>
 
 
-    <script src="jquery.js"></script>
-    <script src="hello.all.min.js"></script>
-    <script src="github.js"></script>
+    <script src="lib/jquery.js"></script>
+    <script src="lib/hello.all.min.js"></script>
+    <script src="lib/github.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="index.js"></script>
