--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="index.css" />
       
-      <title>Final</title>
+      <title>Adivina</title>
    </head>
    <body>
 
